# fast-game-of-life

./: .gitignore  Cargo.toml  README.md  build.rs  settings.toml
.cargo/: config.toml
benches/: gol.rs  step.rs
src/: cuda.rs  game.rs  lib.rs  main.rs  opencl.rs  simd.rs  trivial.rs
src/cuda/: mod.rs
src/cuda/driver/: args.rs  buffer.rs  kernel.rs  mod.rs  stream.rs
src/kernels/: constants.h  gol.cl  gol.cu
src/opencl/: mod.rs
tests/: gol.rs  grid  integration.rs
