[package]
name = "fast-game-of-life"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cuda-interface = { version = "0.1.1", git = "https://github.com/binary-banter/cuda-interface", optional = true }
opencl3 = { version = "0.9.5", optional = true }
itertools = {version = "0.12.0", optional = true }
once_cell = "1.19.0"
lazy_static = "1.4.0"
toml = "0.8.8"
rayon = { version = "1.8.0", optional = true }

[build-dependencies]
toml = "0.8.8"

[dev-dependencies]
criterion = "0.5.1"

[features]
cuda = ["dep:cuda-interface", "dep:itertools"]
opencl = ["dep:opencl3"]
simd = ["dep:itertools", "dep:rayon"]

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "step"
harness = false
